fixed responsivenes on small screens, now normal is broken

--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,3 @@ body {
 #root {
   height: 100%;
 }
-
-@media only screen and (max-width: 719px) {
-  .responsive-splitter {
-    width: 702px;
-  }
-}
